// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatBubble renders assistant message correctly 1`] = `
<View
  style={
    [
      {
        "marginVertical": 4,
        "paddingHorizontal": 16,
      },
      false,
      {
        "alignItems": "flex-start",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 8,
          "maxWidth": "85%",
          "minWidth": 40,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        false,
        {
          "backgroundColor": "transparent",
          "borderLeftColor": "#BFD8C0",
          "borderLeftWidth": 3,
          "borderRadius": 0,
          "maxWidth": "95%",
          "paddingLeft": 12,
        },
      ]
    }
  >
    <View
      style={
        {
          "paddingVertical": 2,
        }
      }
    >
      <View
        style={
          {
            "marginBottom": 4,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#0E1116",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 22.4,
              },
              {
                "color": "#222222",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#0E1116",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 22.4,
                },
                {
                  "color": "#222222",
                },
              ]
            }
          >
            Hi there! This is an assistant response with some longer text to test the bubble styling.
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ChatBubble renders system message correctly 1`] = `
<View
  style={
    [
      {
        "marginVertical": 4,
        "paddingHorizontal": 16,
      },
      false,
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 8,
          "maxWidth": "85%",
          "minWidth": 40,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        false,
        false,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#0E1116",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 22.4,
          },
          [
            {
              "fontSize": 16,
              "lineHeight": 22,
            },
            false,
          ],
        ]
      }
    >
      System notification message
    </Text>
  </View>
</View>
`;

exports[`ChatBubble renders user message correctly 1`] = `
<View
  style={
    [
      {
        "marginVertical": 4,
        "paddingHorizontal": 16,
      },
      {
        "alignItems": "flex-end",
      },
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 8,
          "maxWidth": "85%",
          "minWidth": 40,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        {
          "backgroundColor": "#2E5540",
          "borderColor": "rgba(255, 255, 255, 0.05)",
          "borderWidth": 0.5,
          "elevation": 1,
          "marginRight": 12,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 3,
        },
        false,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#0E1116",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 22.4,
          },
          [
            {
              "fontSize": 16,
              "lineHeight": 22,
            },
            {
              "color": "#F9F6F1",
            },
          ],
        ]
      }
    >
      Hello, this is a user message!
    </Text>
  </View>
</View>
`;
